[package]
name = "atomic-try-update"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Primitives that make it easy to implement correct lock-free algorithms"
documentation = "https://docs.rs/atomic-try-update"
readme = "README.md"
repository = "https://github.com/crystalcld/atomic-try-update/"
categories = [ "algorithms", "concurrency", "database-implementations", "hardware-support", "memory-management"]
keywords = ["lock-free", "stack", "linearizable", "scheduler", "mutual-exclusion"]
# TODO: Set homepage field

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "test-util" ] }
